--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -1,9 +1,9 @@
-!, <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FCC Technical Documention Project</title>
+    <title>FCC Technical Documentation Project</title>
 </head>
 <body>
     
