added most user stories required and starting blueprint

--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -6,6 +6,118 @@
     <title>FCC Technical Documentation Project</title>
 </head>
 <body>
-    
+    <nav id="navbar">
+        <header>
+            <h1>Page Topic</h1>
+        </header>
+            <a href="#Topic_One" class="nav-link">Topic One</a>
+            <a href="#Topic_Two" class="nav-link">Topic Two</a>
+            <a href="#Topic_Three" class="nav-link">Topic Three</a>
+            <a href="#Topic_Four" class="nav-link">Topic Four</a>
+            <a href="#Topic_Five" class="nav-link">Topic Five</a>
+    </nav>
+    <main id="main-doc">
+        <section class="main-section" id="Topic_One">
+            <Header>
+                <h2>Topic One</h2>
+            </Header>
+                <p>Bacon ipsum dolor amet shankle frankfurter drumstick t-bone venison, turducken tail salami pig
+                    andouille. Shankle rump frankfurter meatloaf pancetta chuck tongue sausage short loin turkey pork
+                    belly drumstick tenderloin shoulder t-bone. Strip steak shoulder tongue turducken burgdoggen
+                    frankfurter. Frankfurter burgdoggen short loin shankle. Jowl burgdoggen shank short ribs. Chislic
+                    frankfurter t-bone bacon.</p>
+                <p>Strip steak beef ribs drumstick, chislic tri-tip frankfurter porchetta beef. Andouille hamburger
+                    shoulder corned beef turducken ham tongue jerky swine filet mignon boudin sirloin rump. Shankle
+                    doner andouille ribeye buffalo venison. Kielbasa ribeye swine filet mignon pastrami ground round
+                    pork.</p>
+                    <ul>
+                        <li>blah</li>
+                        <li>blah</li>
+                        <li>blah</li>
+                    </ul>
+        </section>
+        
+        <hr> 
+
+        <section class="main-section" id="Topic_Two">
+            <Header>
+                <h2>Topic Two</h2>
+            </Header>
+                <p>Pork loin bresaola tenderloin shankle boudin fatback. Rump cow bacon venison burgdoggen. Meatball
+                    jowl alcatra spare ribs ham bresaola venison, ground round capicola buffalo brisket. Pork loin
+                    brisket sausage, shankle tenderloin strip steak shank tongue cupim doner sirloin ribeye. Chislic
+                    bresaola tail andouille, sirloin jerky short loin ham hock frankfurter picanha spare ribs drumstick
+                    pork belly prosciutto pork loin. Corned beef ham drumstick kielbasa, cow rump buffalo frankfurter
+                    capicola. Short loin ground round brisket, prosciutto cow turducken landjaeger.</p>
+                <p>Shank venison meatloaf, rump short loin tri-tip pork bresaola turkey filet mignon capicola pancetta.
+                    Alcatra andouille swine meatball pastrami cupim. Jowl meatball cupim t-bone, biltong short loin beef
+                    ribs. Short loin pastrami tri-tip pork loin pork.</p>
+        </section>
+
+        <hr>
+
+        <section class="main-section" id="Topic_Three">
+            <Header>
+                <h2>Topic Three</h2>
+            </Header>
+                <p>Pork belly ball tip tenderloin, biltong jowl meatloaf buffalo jerky sirloin frankfurter boudin
+                    alcatra doner shank filet mignon. Leberkas short loin chuck, spare ribs frankfurter corned beef
+                    filet mignon buffalo capicola rump drumstick. Kielbasa turkey alcatra, chislic turducken bresaola
+                    jowl. Shankle buffalo hamburger turkey, jowl kielbasa beef sausage capicola flank. Turkey beef ribs
+                    biltong, drumstick burgdoggen andouille boudin pastrami. Turkey fatback short ribs kielbasa.</p>
+                <p>Turkey boudin porchetta, meatball shank fatback ball tip cupim ham hock. Doner bacon prosciutto short
+                    loin tenderloin pork chop, pork belly pastrami ball tip ham hock short ribs tri-tip. Brisket
+                    frankfurter t-bone, strip steak pastrami tenderloin cupim meatloaf filet mignon ball tip tail
+                    kielbasa spare ribs. Shankle swine beef ribs cow jerky kielbasa. Frankfurter ball tip drumstick,
+                    brisket capicola shankle hamburger. Chislic jerky cupim shank hamburger, venison burgdoggen cow
+                    capicola beef. Fatback tenderloin tri-tip, turkey beef flank kevin swine turducken chuck cupim
+                    prosciutto pork loin pork.</p>
+
+                    <blockquote>more blah</blockquote>
+        </section>
+
+        <hr>
+
+        <section class="main-section" id="Topic_Four">
+            <Header>
+                <h2>Topic Four</h2>
+            </Header>
+                <p>Meatloaf tenderloin chicken jerky. Chislic biltong short loin meatball. Andouille pancetta chislic,
+                    boudin jerky ground round sirloin tenderloin. Shankle rump tenderloin andouille pork chop strip
+                    steak. Pancetta pork beef tongue. Sausage kevin pancetta pastrami pork turkey frankfurter jerky
+                    prosciutto picanha. Swine shankle kevin cow.</p>
+                    <ul>
+                        <li>blah</li>
+                        <li>blah</li>
+                        <li>blah</li>
+                    </ul>
+                <p>Bresaola pork loin pork boudin pork chop turkey, kevin spare ribs fatback. Shankle ham pork, pastrami
+                    capicola prosciutto brisket sirloin ball tip beef ribs. Chicken pork belly andouille turkey bacon
+                    chuck. Tongue shank beef ribs short loin brisket. Pork chop shoulder jowl doner pastrami. Pig
+                    brisket filet mignon picanha chislic.</p>
+        </section>
+
+        <hr>
+
+        <section class="main-section" id="Topic_Five">
+            <Header>
+                <h2>Topic Five</h2>
+            </Header>
+                <p>Tongue corned beef ribeye, short loin turkey shank strip steak short ribs venison jerky kielbasa
+                    drumstick. Tongue biltong shoulder jerky, sirloin strip steak corned beef jowl. Frankfurter kielbasa
+                    chuck, short loin short ribs ball tip hamburger tenderloin drumstick meatloaf. Meatball chicken
+                    brisket burgdoggen shoulder strip steak tri-tip cow flank biltong. Tenderloin shank hamburger tail
+                    turkey meatloaf beef ribs shoulder venison ground round pig strip steak short ribs. Jowl short ribs
+                    turkey, chislic alcatra frankfurter andouille bacon pork belly short loin fatback filet mignon
+                    swine.</p>
+                <p>Jerky kielbasa ground round prosciutto, bresaola beef ribs doner capicola boudin t-bone salami cupim.
+                    Turkey chicken cow swine, frankfurter pig chislic biltong hamburger doner. Kielbasa pork loin ham
+                    hock sirloin filet mignon sausage bacon porchetta chicken. Meatloaf andouille bacon cow, kevin
+                    kielbasa shoulder jerky. Ball tip porchetta doner pig alcatra turkey cow chislic bresaola brisket
+                    pancetta salami.</p>
+        </section>
+    </main>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
