link stylesheet and add menu icon and attribution

--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>FCC Technical Documentation Project</title>
 </head>
 <body>
@@ -15,6 +16,8 @@
             <a href="#Topic_Three" class="nav-link">Topic Three</a>
             <a href="#Topic_Four" class="nav-link">Topic Four</a>
             <a href="#Topic_Five" class="nav-link">Topic Five</a>
+            <img src="/menu.svg"   width="20px" height="20px">
+            
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Topic_One">
@@ -116,6 +119,8 @@
                     kielbasa shoulder jerky. Ball tip porchetta doner pig alcatra turkey cow chislic bresaola brisket
                     pancetta salami.</p>
         </section>
+        Icons made by <a href="https://www.flaticon.com/authors/hirschwolf" title="hirschwolf">hirschwolf</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
     </main>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
