move img to nav header and remove any header capitalization

--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -10,20 +10,19 @@
     <nav id="navbar">
         <header>
             <h1>Page Topic</h1>
+            <img src="/menu.svg" width="25px" height="25px">
         </header>
             <a href="#Topic_One" class="nav-link">Topic One</a>
             <a href="#Topic_Two" class="nav-link">Topic Two</a>
             <a href="#Topic_Three" class="nav-link">Topic Three</a>
             <a href="#Topic_Four" class="nav-link">Topic Four</a>
             <a href="#Topic_Five" class="nav-link">Topic Five</a>
-            <img src="/menu.svg"   width="20px" height="20px">
-            
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Topic_One">
-            <Header>
+            <header>
                 <h2>Topic One</h2>
-            </Header>
+            </header>
                 <p>Bacon ipsum dolor amet shankle frankfurter drumstick t-bone venison, turducken tail salami pig
                     andouille. Shankle rump frankfurter meatloaf pancetta chuck tongue sausage short loin turkey pork
                     belly drumstick tenderloin shoulder t-bone. Strip steak shoulder tongue turducken burgdoggen
@@ -43,9 +42,9 @@
         <hr> 
 
         <section class="main-section" id="Topic_Two">
-            <Header>
+            <header>
                 <h2>Topic Two</h2>
-            </Header>
+            </header>
                 <p>Pork loin bresaola tenderloin shankle boudin fatback. Rump cow bacon venison burgdoggen. Meatball
                     jowl alcatra spare ribs ham bresaola venison, ground round capicola buffalo brisket. Pork loin
                     brisket sausage, shankle tenderloin strip steak shank tongue cupim doner sirloin ribeye. Chislic
@@ -60,9 +59,9 @@
         <hr>
 
         <section class="main-section" id="Topic_Three">
-            <Header>
+            <header>
                 <h2>Topic Three</h2>
-            </Header>
+            </header>
                 <p>Pork belly ball tip tenderloin, biltong jowl meatloaf buffalo jerky sirloin frankfurter boudin
                     alcatra doner shank filet mignon. Leberkas short loin chuck, spare ribs frankfurter corned beef
                     filet mignon buffalo capicola rump drumstick. Kielbasa turkey alcatra, chislic turducken bresaola
@@ -82,9 +81,9 @@
         <hr>
 
         <section class="main-section" id="Topic_Four">
-            <Header>
+            <header>
                 <h2>Topic Four</h2>
-            </Header>
+            </header>
                 <p>Meatloaf tenderloin chicken jerky. Chislic biltong short loin meatball. Andouille pancetta chislic,
                     boudin jerky ground round sirloin tenderloin. Shankle rump tenderloin andouille pork chop strip
                     steak. Pancetta pork beef tongue. Sausage kevin pancetta pastrami pork turkey frankfurter jerky
@@ -103,9 +102,9 @@
         <hr>
 
         <section class="main-section" id="Topic_Five">
-            <Header>
+            <header>
                 <h2>Topic Five</h2>
-            </Header>
+            </header>
                 <p>Tongue corned beef ribeye, short loin turkey shank strip steak short ribs venison jerky kielbasa
                     drumstick. Tongue biltong shoulder jerky, sirloin strip steak corned beef jowl. Frankfurter kielbasa
                     chuck, short loin short ribs ball tip hamburger tenderloin drumstick meatloaf. Meatball chicken
