Change link and header names

--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -9,21 +9,21 @@
 <body>
     <nav id="navbar">
         <header>
-            <h1>Page Topic</h1>
+            <h1>Meat, Glorious Meat</h1>
         </header>
         <p>
-            <a href="#Topic_One" class="nav-link">Topic One</a>
-            <a href="#Topic_Two" class="nav-link">Topic Two</a>
-            <a href="#Topic_Three" class="nav-link">Topic Three</a>
-            <a href="#Topic_Four" class="nav-link">Topic Four</a>
-            <a href="#Topic_Five" class="nav-link">Topic Five</a>
+            <a href="#Fried" class="nav-link">Fried</a>
+            <a href="#Grilled" class="nav-link">Grilled</a>
+            <a href="#Baked" class="nav-link">Baked</a>
+            <a href="#Smoked" class="nav-link">Smoked</a>
+            <a href="#Broiled" class="nav-link">Broiled</a>
         </p>
             
     </nav>
     <main id="main-doc">
-        <section class="main-section" id="Topic_One">
+        <section class="main-section" id="Fried">
             <header>
-                <h2>Topic One</h2>
+                <h2>Fried</h2>
             </header>
                 <p>Bacon ipsum dolor amet shankle frankfurter drumstick t-bone venison, turducken tail salami pig
                     andouille. Shankle rump frankfurter meatloaf pancetta chuck tongue sausage short loin turkey pork
@@ -43,9 +43,9 @@
         
         <hr> 
 
-        <section class="main-section" id="Topic_Two">
+        <section class="main-section" id="Grilled">
             <header>
-                <h2>Topic Two</h2>
+                <h2>Grilled</h2>
             </header>
                 <p>Pork loin bresaola tenderloin shankle boudin fatback. Rump cow bacon venison burgdoggen. Meatball
                     jowl alcatra spare ribs ham bresaola venison, ground round capicola buffalo brisket. Pork loin
@@ -60,9 +60,9 @@
 
         <hr>
 
-        <section class="main-section" id="Topic_Three">
+        <section class="main-section" id="Baked">
             <header>
-                <h2>Topic Three</h2>
+                <h2>Baked</h2>
             </header>
                 <p>Pork belly ball tip tenderloin, biltong jowl meatloaf buffalo jerky sirloin frankfurter boudin
                     alcatra doner shank filet mignon. Leberkas short loin chuck, spare ribs frankfurter corned beef
@@ -82,9 +82,9 @@
 
         <hr>
 
-        <section class="main-section" id="Topic_Four">
+        <section class="main-section" id="Smoked">
             <header>
-                <h2>Topic Four</h2>
+                <h2>Smoked</h2>
             </header>
                 <p>Meatloaf tenderloin chicken jerky. Chislic biltong short loin meatball. Andouille pancetta chislic,
                     boudin jerky ground round sirloin tenderloin. Shankle rump tenderloin andouille pork chop strip
@@ -103,9 +103,9 @@
 
         <hr>
 
-        <section class="main-section" id="Topic_Five">
+        <section class="main-section" id="Broiled">
             <header>
-                <h2>Topic Five</h2>
+                <h2>Broiled</h2>
             </header>
                 <p>Tongue corned beef ribeye, short loin turkey shank strip steak short ribs venison jerky kielbasa
                     drumstick. Tongue biltong shoulder jerky, sirloin strip steak corned beef jowl. Frankfurter kielbasa
