add footer and make h1 a link

--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav id="navbar">
         <header>
-            <h1>Meat, Glorious Meat</h1>
+            <h1><a href="#">Meat, Glorious Meat</a></h1>
         </header>
         <p>
             <a href="#Fried" class="nav-link">Fried</a>
@@ -121,6 +121,10 @@
                     pancetta salami.</p>
         </section>
     </main>
+
+    <footer>
+        <p>Photo by Nicolas Postiglioni from Pexels</p>
+    </footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
