--- a/tech-documentation/index.html
+++ b/tech-documentation/index.html
@@ -18,7 +18,6 @@
             <a href="#Smoked" class="nav-link">Smoked</a>
             <a href="#Broiled" class="nav-link">Broiled</a>
         </p>
-            
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Fried">
@@ -35,10 +34,11 @@
                     doner andouille ribeye buffalo venison. Kielbasa ribeye swine filet mignon pastrami ground round
                     pork.</p>
                     <ul>
-                        <li>blah</li>
-                        <li>blah</li>
-                        <li>blah</li>
+                        <li>Fried Chicken</li>
+                        <li>Fried Shrimp</li>
+                        <li>Fried Pork Chops</li>
                     </ul>
+                    <img src="pork-1827747_640.jpg" alt="pork frying in pan">
         </section>
         
         <hr> 
@@ -56,6 +56,11 @@
                 <p>Shank venison meatloaf, rump short loin tri-tip pork bresaola turkey filet mignon capicola pancetta.
                     Alcatra andouille swine meatball pastrami cupim. Jowl meatball cupim t-bone, biltong short loin beef
                     ribs. Short loin pastrami tri-tip pork loin pork.</p>
+
+                <video controls width="50%">
+                    <source src="Pexels-Videos-4192.mp4" type="video/mp4">
+                    Sorry, your browser doesn't support embedded videos.
+                </video>             
         </section>
 
         <hr>
@@ -77,7 +82,7 @@
                     capicola beef. Fatback tenderloin tri-tip, turkey beef flank kevin swine turducken chuck cupim
                     prosciutto pork loin pork.</p>
 
-                    <blockquote>more blah</blockquote>
+                    <blockquote>Baked meat is more healthy</blockquote>
         </section>
 
         <hr>
@@ -91,9 +96,9 @@
                     steak. Pancetta pork beef tongue. Sausage kevin pancetta pastrami pork turkey frankfurter jerky
                     prosciutto picanha. Swine shankle kevin cow.</p>
                     <ul>
-                        <li>blah</li>
-                        <li>blah</li>
-                        <li>blah</li>
+                        <li>Smoked Turkey</li>
+                        <li>Smoked Sausage</li>
+                        <li>Smoked Fish</li>
                     </ul>
                 <p>Bresaola pork loin pork boudin pork chop turkey, kevin spare ribs fatback. Shankle ham pork, pastrami
                     capicola prosciutto brisket sirloin ball tip beef ribs. Chicken pork belly andouille turkey bacon
@@ -123,7 +128,7 @@
     </main>
 
     <footer>
-        <p>Photo by Nicolas Postiglioni from Pexels</p>
+        <p>Background photo by Nicolas Postiglioni from Pexels</p>
     </footer>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
